# esp32-s3-ssh-wled

./: .gitignore  ATOM-Echo-TRIGGERcmd-Voice.md  AtomS3-Lite-TRIGGERcmd-RGB-LED.md  BIKE_TRACKER.md  Bike-Tracker.md  CLAUDE.md  CMakeLists.txt  CONNECT_WIFI_FIX.md  Core2-Grove-Mic-Adapter.md  Core2-TRIGGERcmd-Display.md  ESP32-S3-DevKitC-1.md  JC3248W535.md  LANDSCAPE_MODE.md  MUSIC_UI_PLAN.md  PLAN.md  Picture-Frame-TRIGGERcmd-Display.md  README.md  TRIGGERcmd-CYD-Display.md  apply-patches.ps1  build.ps1  build_stdout.txt  core2_bt_a2dp_crash.md  partitions_bike_tracker.csv  partitions_core2.csv  partitions_cyd.csv  partitions_tcmd_atom_echo.csv  sdkconfig  sdkconfig.atoms3_lite  sdkconfig.bike_tracker  sdkconfig.core2  sdkconfig.cyd  sdkconfig.defaults  sdkconfig.devkitc  sdkconfig.esp32s3_cam  sdkconfig.jc3248w535  sdkconfig.old  sdkconfig.picture_frame  sdkconfig.tcmd_atom_echo
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: pages.yml
docs/: CORE2_VISUALIZER.md  TCMD_ATOM_ECHO.md  config.json  core2-2.0.107.html  index.html  manifest-atoms3_lite.json  manifest-bike_tracker-2.0.369.json  manifest-bike_tracker-2.0.370.json  manifest-bike_tracker-2.0.371.json  manifest-bike_tracker-2.0.372.json  manifest-bike_tracker.json  manifest-core2-2.0.107.json  manifest-core2-2.0.108.json  manifest-core2-2.0.109.json  manifest-core2-2.0.110.json  manifest-core2-2.0.111.json  manifest-core2-2.0.112.json  manifest-core2-2.0.113.json  manifest-core2-2.0.114.json  manifest-core2-2.0.115.json  manifest-core2-2.0.116.json  manifest-core2-2.0.117.json  manifest-core2-2.0.118.json  manifest-core2-2.0.119.json  manifest-core2-2.0.120.json  manifest-core2-2.0.121.json  manifest-core2-2.0.122.json  manifest-core2-2.0.123.json  manifest-core2-2.0.124.json  manifest-core2-2.0.125.json  manifest-core2-2.0.126.json  manifest-core2-2.0.127.json  manifest-core2-2.0.128.json  manifest-core2-2.0.129.json  manifest-core2-2.0.130.json  manifest-core2-2.0.131.json  manifest-core2-2.0.132.json  manifest-core2-2.0.133.json  manifest-core2-2.0.134.json  manifest-core2-2.0.135.json  (+476 more)
main/: CMakeLists.txt  Kconfig.projbuild  atom_audio.c  atom_audio.h  atom_led.c  atom_led.h  atom_mic.c  atom_mic.h  atoms3_led.c  atoms3_led.h  atoms3_lite_commands.json  audio_clips.c  audio_clips.h  bike_tracker.c  bike_tracker.h  camera_server.c  camera_server.h  core2_adc_mic.c  core2_adc_mic.h  core2_audio.c  core2_audio.h  core2_leds.c  core2_leds.h  core2_mic.c  core2_mic.h  core2_wakeword.c  core2_wakeword.h  cyd_commands.json  gps_ubx.c  gps_ubx.h  http_config.c  http_config.h  http_pf_config.c  http_pf_config.h  idf_component.yml  improv_wifi.c  improv_wifi.h  led_control.c  led_control.h  main.c  (+34 more)
patches/: 0001-wolfssl-c23-thread_local-keyword.patch  0002-wolfssl-disable-hw-crypto-idf6.patch
sd-backup-server/: main.go
